# lemonade-store

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.claude/: settings.json
.claude-flow/: CAPABILITIES.md  config.yaml
.claude-flow/security/: audit-status.json
.claude/helpers/: memory.js  security-scanner.sh
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: department-change.yml
.github/workflows/: ci.yml  codeql.yml  codex-review.yml  docs.yml  gemini-review.yml  openhands-review.yml  pr-agent-review.yml  qodo-merge.yml
.swarm/: memory.db  memory.db-shm  memory.db-wal  schema.sql  state.json
datasets/: README.md  accounting_events.jsonl  cashier_events.jsonl  security_events.jsonl
docs/: BUILD_ORDER.md  CLOUDFLARE_WEBSITE.md  DATA_LAYOUT.md  DEPARTMENTS.md  EVENTS.md  SPEC.md  TIE_DYE_FARMS.md  index.md
docs/package-manager/: README.md  admin-install-guide.md  admin-repo.md  agents.md  departments.md  developer-guide.md  help-center.md  internal-access.md  offline-bundles.md  operator-guide.md  security-privacy.md  troubleshooting.md
docs/superpowers/specs/: 2026-06-25-package-manager-design.md
docs/wiki/: README.md  agents.md  architecture.md  conventions.md  departments.md  runbook.md
examples/offline-bundle/: README.md  lemonade-bundle.toml
examples/offline-bundle/artifacts/: lemonade_cashier-0.1.0-py3-none-any.whl  lemonade_inventory-0.1.0-py3-none-any.whl
examples/tie-dye-farms/: departments.toml  sample_events.jsonl  store.toml  website.toml
openspec/: project.md
openspec/changes/runtime-dependency-boundary/: proposal.md  tasks.md
openspec/specs/accounting/: spec.md
openspec/specs/cashier/: spec.md
openspec/specs/inventory/: spec.md
openspec/specs/marketeer/: spec.md
openspec/specs/reports/: spec.md
openspec/specs/security/: spec.md
openspec/specs/site/: spec.md
openspec/templates/: design.md  proposal.md  tasks.md
src/lemonade_store/: __init__.py  __main__.py  bundle.py  cli.py  config.py  departments.py  events.py  package_manager.py  py.typed
tests/: test_bundle.py  test_cli.py  test_config.py  test_datasets.py  test_departments.py  test_evaluate_datasets.py  test_events.py  test_package_manager.py  test_package_manager_docs.py
tools/: evaluate_datasets.py
(+2 files in other folders)
