[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lemonade-store"
version = "0.1.0"
description = "Offline-first ma-and-pa retail suite: cashier as the source of truth, with accounting/inventory/marketing/supplier/reports/security/site departments. Local-first; built for AMD Strix Halo."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Lemonade Store contributors" }]
keywords = ["pos", "retail", "offline-first", "lemonade", "strix-halo", "npu"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Office/Business",
]
dependencies = []

[project.scripts]
lemonade = "lemonade_store.cli:main"

[project.optional-dependencies]
agents = [
  # FIXME: pin to a specific commit SHA once lemonade-agents stabilizes
  "lemonade-agents @ git+https://github.com/bong-water-water-bong/lemonade-agents@main",
]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.6",
  "mypy>=1.10",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
]

[project.urls]
Homepage = "https://github.com/bong-water-water-bong/lemonade-store"
Issues = "https://github.com/bong-water-water-bong/lemonade-store/issues"
Cashier = "https://github.com/bong-water-water-bong/lemonade-cashier"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lemonade_store = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # bugbear
  "SIM", # simplify
]
ignore = [
  "E501", # long lines (we keep some long error messages readable)
]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["lemonade_store"]
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
